# AGH

./: README.md
Semester III/Numerical Methods/: Szymon_Cogiel_Metoda_Eliminacji_Gaussa_i_det.m  integral_Szymon_Cogiel.m
Semester III/Object Oriented Programming/CogielSzymon-etap2/: Bike.cpp  CMakeLists.txt  Car.cpp  Komis.cpp  Motor.h  Motor_vehicle.cpp  Varnisher.cpp  Varnisher.h  Vehicle.cpp  Vehicle.h  cars_for_sell.csv  cars_in_stock.csv  datafactory.txt  opis_pliku_wsadowego.txt  teamt2.txt  temat3.txt  utils.cpp  utils.h
Semester III/Physics II/gravity acceleration analysis/: opracowanie_danych_Szymon_Cogiel.ipynb
Semester III/Spatial data analysis/: Analiza_statystyczna.r  Analiza_zaleznosci_pomiedzy_dwiema_zmiennymi..r  Intensywnosc_procesu_punktowego..r  Intro.r  Relacje_pomiedzy_punktami.r  Wprowadzenie_do_analizy_procesow_punktowych..r  proj1.r
Semester IV/Earth Science Modeling/Geotermal model/: cw3_Szymon_Cogiel.r
Semester IV/Earth Science Modeling/Solving Laplace's equation by MRS method/: .RData  .Rhistory  Szymon_Cogiel_Cw0.r
Semester IV/Electronic Measurement Techniques in Earth Sciences/: multimeter.c
Semester IV/os/windows/: zadanka.md
Semestr III/Numerical Methods/: Szymon_Cogiel_Metoda_Eliminacji_Gaussa_i_det.m  aproksymacja_Szymon_Cogiel.m  metoda_iteracji .m  metoda_iteracji.m
Semestr III/Object Oriented Programming/CogielSzymon-etap2/: Bike.h  Car.h  Cin_exception.cpp  Cin_exception.h  Div_zero_exc.cpp  Div_zero_exc.h  Factory.cpp  Factory.h  (+7 more)
Semestr III/Spatial data analysis/: all_ex.r  medelowanie_prcesow_niejednorodnych.r
(+12 files in other folders)
